home/kkleine/dev/lkml/0/11044.ba42830749d9fa93bbbd2cee924a54436fbd3388
CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#30: 
include/linux/freezer.h: In function ‘frozen’:
                                     ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#32: 
include/linux/freezer.h:9: error: ‘PF_FROZEN’ undeclared (first use in this function)
                                  ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#34: 
fs/jfs/jfs_txnmgr.c: In function ‘freezing’:
                                 ^

/tmp/tmp.gGZ8aIRHtl//home/kkleine/dev/lkml/0/patch.offset.11044.commit.ba42830749d9fa93bbbd2cee924a54436fbd3388 total: 0 errors, 0 warnings, 3 checks, 7 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

/tmp/tmp.gGZ8aIRHtl//home/kkleine/dev/lkml/0/patch.offset.11044.commit.ba42830749d9fa93bbbd2cee924a54436fbd3388 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
